[tool.poetry]
name = "cc-analyzer"
version = "0.1.0"
description = ""
authors = ["Scott Alan Turner <turner655+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
pandas = "^2.2.3"
boto = "^2.49.0"
anthropic = "^0.40.0"
python-dotenv = "^1.0.1"
pypdf2 = "^3.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
