[tool.poetry]
name = "cc-analyzer"
version = "0.1.0"
description = ""
authors = ["Scott Alan Turner <turner655+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
celery = "^5.3.4"
redis = "^5.0.1"
anthropic = "^0.3.11"
pandas = "^2.1.3"
pydantic = "^2.5.1"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
